<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MatchListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="246dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:background="@color/green"
            android:hint="@string/hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageButton
            android:id="@+id/buttonSearch"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:scaleType="centerCrop"
            android:src="@drawable/search"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editTextSearch"
            app:layout_constraintTop_toTopOf="@+id/editTextSearch" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textTitleMatchList"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>




        <!-- RecyclerView to display match items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="412dp"
            android:layout_height="564dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
            tools:listitem="@layout/list_item_match" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
