<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MatchDetailsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textTitleMatchDetails"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_white2"
                android:orientation="vertical"
                android:padding="5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:text="@string/Time"/>


                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    tools:text="time" />

            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingEnd="8dp"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:text="@string/Location"/>
                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    tools:text="Location" />

            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textTeam1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"
                        tools:text="Team1" />

                    <FrameLayout
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:background="@color/red">

                        <TextView
                            android:id="@+id/scoreHomeTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingStart="8dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry"
                            tools:text="0" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@color/black" />

                        <TextView
                            android:id="@+id/scoreAwayTeam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingEnd="8dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry"
                            tools:text="0" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/textTeam2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"
                        tools:text="Team2" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/buttonBack"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
</androidx.constraintlayout.widget.ConstraintLayout>